fix the main part and navbar overlaped question

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,10 @@
   border-radius: 0px;
 }
 
+.main{
+  margin-top: 70px;
+}
+
 .alert{
   margin: -20px;
   border-radius: 0px;
